fixing repeat cropping issue

--- a/app/assets/scss/modules/_get-product-image.scss
+++ b/app/assets/scss/modules/_get-product-image.scss
@@ -13,6 +13,7 @@
 
 	.image-wrapper {
 		position: relative;
+		min-height: 180px;
 	}
 
 	.image-action {
